--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "@supabase/supabase-js": "^2.49.4",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tailwindcss/node": "^4.1.5",
     "@tanstack/react-query": "^5.69.0",
@@ -29,6 +30,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "server-only": "^0.0.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "superjson": "^2.2.1",
     "zod": "^3.24.2"
   },
