--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
     "react-icons": "^5.5.0",
     "server-only": "^0.0.1",
     "socket.io": "^4.8.1",
